--- a/DataBase/DataBase.csproj
+++ b/DataBase/DataBase.csproj
@@ -16,7 +16,12 @@
     <PackageReference Include="Microsoft.Extensions.Configuration.FileExtensions" Version="7.0.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="7.0.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.KeyPerFile" Version="7.0.2" />
+    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="7.0.1" />
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL.Design" Version="1.1.0" />
   </ItemGroup>
+
+	<ItemGroup>
+		<ProjectReference Include="..\domain\domain.csproj" />
+	</ItemGroup>
 
 </Project>
